2006-08-11  Mike Kelly  <pioto@pioto.org>

	* ebuild_fail/dynusers_failure.bash.in,
	ebuild_postrm_post/dynusers_del.bash.in,
	ebuild_setup_pre/dynusers_add.bash.in: Update the hooks to run all
	stuff from within a helper function (to prevent polluting the
	environment). Add copyright header and other boilerplate. Update hooks
	to use the latest API specs.

	* Makefile.am, ebuild_fail/Makefile.am,
	ebuild_postrm_post/Makefile.am,  ebuild_setup_pre/Makefile.am,
	tools/subst.bash, tools/get_autoconf_macros.sed: Clean up our
	Makefile.am's. Add the shell script "compiler" from dynusers.

	* configure.ac: "Modernize" our autoconf stuff.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.1

	* ebuild_fail/Makefile.am: Fix a problem which was making a parallel
	make install with -j5 fail, while -j3, -j1 worked fine.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.0

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* ebuild_*/*bash*: Switch all called scripts from dynusers to end in
	.bash instead of just .sh. Prepare for 0.3.0 release.

2006-07-29  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.2.0

	* ebuild_fail/: Add failure hook so we can clean up from ourselves.

2006-07-27  Mike Kelly  <pioto@pioto.org>

	* ebuild_postrm_post/dynusers.bash.in: Remove the now unnecessary
	sourcing of ${scriptdir}/common/config.

2006-07-26  Mike Kelly  <pioto@pioto.org>

	* ebuild_setup_pre/dynusers.bash.in: Use the add.sh from dynusers to
	do all the heavy lifting, we just feed it a few raw variables.

2006-07-24  Mike Kelly  <pioto@pioto.org>

	* ebuild_postrm_post/dynusers.bash.in: Make use of ${scriptdir}/db.sh
	to interface with the backend db instead of doing it directly
	ourselves.

	* ebuild_postrm_post/dynusers.bash.in: Drop the s from the user and
	group DBDIR subdirs.

2006-07-20  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.1.3

	* ebuild_setup_pre/dynusers.bash.in: Update to pass
	"${USERLAND}-${ELIBC}" as the unique system identifier, instead of